# ballistic-solve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/ballistic-solve/: environment.hpp  platform.hpp  projectile.hpp  simulation.hpp  targeting.hpp  tools.hpp  trajectory.hpp
core/include/ballistic_solve/: ballistic.hpp  ballistic.inl  constants.hpp  environment.hpp  environment.inl  projectile.hpp  projectile.inl  tools.hpp  tools.inl  utility.hpp
core/include/ballisticsolver/: environment.hpp  platform.hpp  projectile.hpp  simulation.hpp  targeting.hpp  tools.hpp  trajectory.hpp
core/src/: ballistic.cpp  environment.cpp  platform.cpp  projectile.cpp  simulation.cpp  targeting.cpp  tools.cpp  trajectory.cpp  utility.cpp
python/: CMakeLists.txt
python/src/: bindings.cpp
python/src/ballistic-solve/: _core.pyi
python/src/ballistic_solve/: __init__.py  test.py
python/src/ballisticsolver/: __init__.py
tests/: test_success_rate.py  test_success_rate_earliest.py  test_success_rate_latest.py  test_utils.py
