[build-system]
requires = [
    "scikit-build-core",
    "nanobind"
]
build-backend = "scikit_build_core.build"

[project]
name = "ballistic-solve"
version = "0.2.1"
requires-python = ">=3.9"
dependencies = [
    "numpy"
]
description = "Real-time numerical solver for moving target interception with realistic ballistic trajectory"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ariyudo Pertama", email = "yudojago@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "ballistic",
    "trajectory",
    "projectile",
    "physics-simulation",
    "ballistics-solver",
    "ode-solver",
    "numerical-integration",
    "root-finding",
    "optimization",
    "fire-control",
    "targeting",
    "intercept",
    "weapon-systems",
    "aerospace",
    "drag-coefficient",
    "atmospheric-effects",
    "wind-compensation",
    "gravity",
    "adaptive-stepping",
    "real-time",
    "scientific-computing",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/src/ballistic_solve"]
